# Krakentrade

./: .gitignore  README.md
services/topic_to_feature_store/: Makefile  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade_producer/src/trade_data_source/: __init__.py  base.py  kraken_rest_api.py  kraken_websocket_api.py  trade.py
services/trade_to_ohlc/: Makefile  dev.env  historical.dev.env  historical.prod.env  live.prod.env  prod.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
